services/spine/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spine-service
  labels:
    app: spine
spec:
  selector:
    app: spine
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4600
  type: ClusterIP # Internal service for ALB Ingress
